--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.0.4",
     "@nestjs/typeorm": "^9.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "nestjs-crud-utils": "^0.0.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "0.2.36"
+    "typeorm": "0.2.36",
+    "utils-friendly": "^1.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
